# rust-devicons

./: Cargo.toml  README.md  rustfmt.toml
examples/: README.md  all.rs  dark_theme.rs  default.rs  light_theme.rs  short.rs
src/: icons.rs  lib.rs
src/icons/: dark.rs  light.rs
