[package]
name = "devicons"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Pasmantier <alex.pasmant@gmail.com>"]
license = "Unlicense"
description = "A Rust library providing functionality to retrieve filetype glyphs (icons) for a wide range of common file formats."
readme = "README.md"
homepage = "https://github.com/alexpasmantier/devicons"
repository = "https://github.com/alexpasmantier/devicons"
keywords = ["icons", "filetype", "glyphs", "nerd-fonts", "rust"]
categories = [
  "command-line-utilities",
  "command-line-interface",
  "filesystem",
  "development-tools",
]

[dependencies]
lazy_static = "1.5.0"
